matrix-registration/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-registration
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: matrix-registration
      app: matrix-registration
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: matrix-registration
        app: matrix-registration
    spec:
      securityContext: {}
      containers:
      - image: zeratax/matrix-registration:v0.9.1
        imagePullPolicy: IfNotPresent
        name: matrix-registration
        args: ["serve"]
        ports:
        - containerPort: 5000
          name: web
          protocol: TCP
        volumeMounts:
        - mountPath: /data/config
          name: matrix-registration
      restartPolicy: Always
      volumes:
      - name: matrix-registration
        configMap:
          name: matrix-registration
