matrix-registration/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-registration
spec:
  selector:
    app: matrix-registration
  ports:
    - name: web
      protocol: TCP
      port: 5000
