matrix-registration/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-registration
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`goatchat.ca`) && PathPrefix(`/gate/`)
    kind: Rule
    services:
    - kind: Service
      name: goatchat-matrix-registration
      port: 5000
  tls:
    certResolver: letsencrypt
